# sigil-benchmark

./: .env.example  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LEADERBOARD.md  LICENSE  METHODOLOGY.md  README.md  REVIEW_2026-05-21.md  llms.txt  pyproject.toml
docs/: architecture.md  getting_started.md  (+1 more)
harness/: __init__.py  (+2 more)
results/smoke-claude-code-task_01_b2b_portal-casual-NI-run2/output_files/: .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  docker-entrypoint.sh  fly.toml  pyproject.toml
results/smoke-claude-code-task_01_b2b_portal-casual-NI-run2/output_files/.github/workflows/: ci.yml  deploy.yml
results/smoke-claude-code-task_01_b2b_portal-casual-NI-run2/output_files/app/: __init__.py  config.py  database.py
results/smoke-claude-code-task_01_b2b_portal-casual-NI-run2/output_files/app/core/: __init__.py  csrf.py  rate_limit.py  redis_client.py  security.py  sessions.py
results/smoke-claude-code-task_01_b2b_portal-casual-NI-run2/output_files/app/models/: __init__.py  audit_log.py  base.py  enums.py  invitation.py  membership.py  organization.py  session.py  subscription.py  user.py
results/smoke-claude-code-task_01_b2b_portal-casual-NI-run3/output_files/: .env.example  .gitignore  Dockerfile  README.md  SECURITY.md  alembic.ini  docker-compose.yml  fly.toml  pyproject.toml  railway.json
results/smoke-claude-code-task_01_b2b_portal-casual-NI-run3/output_files/.github/workflows/: ci.yml
results/smoke-claude-code-task_01_b2b_portal-casual-NI-run3/output_files/alembic/: env.py
results/smoke-claude-code-task_01_b2b_portal-casual-NI-run3/output_files/alembic/versions/: 20260519_0001_initial_schema.py
results/smoke-claude-code-task_01_b2b_portal-casual-NI-run3/output_files/app/: __init__.py  config.py  cookies.py  database.py  dependencies.py  main.py  rate_limit.py  schemas.py  security.py  seed.py  templating.py
results/smoke-claude-code-task_01_b2b_portal-casual-NI-run3/output_files/app/models/: __init__.py  audit_log.py  base.py  enums.py  invitation.py  login_attempt.py  membership.py  organization.py  session.py  subscription.py  user.py
results/smoke-claude-code-task_01_b2b_portal-casual-NI-run3/output_files/app/routers/: audit.py  auth.py  billing.py  dashboard.py  gdpr.py  legal.py  pages.py  settings.py  sso.py  users.py  webhooks.py
results/smoke-claude-code-task_01_b2b_portal-casual-NI-run3/output_files/app/services/: __init__.py  audit.py  auth.py  email.py  invitations.py  metrics.py  saml.py  stripe_service.py
results/smoke-claude-code-task_01_b2b_portal-casual-NI-run3/output_files/app/templates/: audit.html  base.html  billing.html  dashboard.html  error.html  gdpr.html  invite_accept.html  invite_invalid.html  landing.html  sso_metadata.html  team.html
results/smoke-claude-code-task_01_b2b_portal-casual-NI-run3/output_files/scripts/: entrypoint.sh
results/smoke-claude-code-task_01_b2b_portal-casual-NI-run3/output_files/tests/: conftest.py  test_auth.py  test_billing.py  test_gdpr.py  test_invitations.py  test_rbac.py  test_security.py
results/smoke-claude-code-task_01_b2b_portal-casual-NI-run4/output_files/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  fly.toml  modal_app.py  pyproject.toml  requirements-dev.txt  requirements-saml.txt  requirements.txt
results/smoke-claude-code-task_01_b2b_portal-casual-NI-run4/output_files/.github/workflows/: ci.yml
results/smoke-claude-code-task_01_b2b_portal-casual-NI-run4/output_files/alembic/: env.py
results/smoke-claude-code-task_01_b2b_portal-casual-NI-run4/output_files/alembic/versions/: 0001_initial.py
results/smoke-claude-code-task_01_b2b_portal-casual-NI-run4/output_files/app/: __init__.py  config.py  context.py  csrf.py  database.py  dependencies.py  enums.py  exceptions.py  flash.py  logging_config.py  main.py  middleware.py  rbac.py  security.py  templating.py  utils.py
results/smoke-claude-code-task_01_b2b_portal-casual-NI-run4/output_files/app/models/: __init__.py  audit_log.py  base.py  data_export.py  email_log.py  invitation.py  membership.py  organization.py  session.py  subscription.py  usage_event.py  user.py
results/smoke-claude-code-task_01_b2b_portal-casual-NI-run4/output_files/app/routers/: __init__.py  audit.py  auth.py  billing.py  dashboard.py  gdpr.py  health.py  legal.py  members.py  pages.py  settings_routes.py  webhooks.py
results/smoke-claude-code-task_01_b2b_portal-casual-NI-run4/output_files/app/services/: __init__.py  audit_service.py  auth_service.py  billing_service.py  email_service.py  gdpr_service.py  invitation_service.py  metrics_service.py  organization_service.py  rate_limit.py  saml_service.py
results/smoke-claude-code-task_02_admin_tool-terse-NI-run1/output_files/: .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
results/smoke-claude-code-task_02_admin_tool-terse-NI-run1/output_files/app/: config.py  db.py  main.py
results/smoke-claude-code-task_02_admin_tool-terse-NI-run1/output_files/migrations/: env.py
results/smoke-claude-code-task_04_support-terse-NI-run1/output_files/: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
results/smoke-claude-code-task_04_support-terse-NI-run1/output_files/app/: __init__.py  config.py  db.py  main.py
results/smoke-claude-code-task_04_support-terse-NI-run1/output_files/docker/: Dockerfile
results/smoke-claude-code-task_04_support-terse-NI-run1/output_files/tests/: conftest.py  test_api_tickets.py  test_email_inbound.py  test_gdpr.py  test_sla.py  test_tickets.py
results/smoke-claude-code-task_04_support-terse/output_files/support-tool/: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
results/smoke-claude-code-task_05_analytics-terse-NI-run1/output_files/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  docker-compose.yml  pyproject.toml  requirements.txt
results/smoke-claude-code-task_05_analytics-terse-NI-run1/output_files/ops/: prometheus.yml
(+817 files in other folders)
