[project]
name = "sigil-benchmark"
version = "0.1.0"
description = "Production Readiness Score (PRS) benchmark for AI-generated code"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
    { name = "Sigil Foundation" }
]
keywords = ["ai", "benchmark", "evaluation", "code-quality", "production-readiness"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "modal>=0.66.0",
    "pyyaml>=6.0",
    "click>=8.1.0",
    "pydantic>=2.5.0",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "pandas>=2.1.0",
    "statsmodels>=0.14.0",
    "scikit-learn>=1.4.0",
    "rich>=13.7.0",
    "httpx>=0.27.0",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
    "black>=24.3.0",
]
irt = [
    "py-irt>=0.4.0",
    "factor-analyzer>=0.5.0",
]

[project.scripts]
sigil-bench = "harness.cli:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
