[project]
name = "saas-portal"
version = "1.0.0"
description = "Production B2B SaaS customer portal — auth, SSO, billing, RBAC, audit, GDPR"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "gunicorn==23.0.0",
    "sqlalchemy==2.0.36",
    "alembic==1.14.0",
    "psycopg[binary]==3.2.3",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.0",
    "python-multipart==0.0.20",
    "jinja2==3.1.5",
    "itsdangerous==2.2.0",
    "argon2-cffi==23.1.0",
    "stripe==11.4.1",
    "aiosmtplib==3.0.2",
    "redis==5.2.1",
    "python3-saml==1.16.0",
    "email-validator==2.2.0",
    "httpx==0.28.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-cov==6.0.0",
    "ruff==0.8.4",
    "mypy==1.14.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S"]
ignore = ["S101", "S104"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S105", "S106"]
"migrations/*" = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]
