[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "acme-portal"
version = "1.0.0"
description = "Production B2B SaaS portal"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "gunicorn==23.0.0",
    "jinja2==3.1.5",
    "python-multipart==0.0.20",
    "sqlalchemy==2.0.36",
    "alembic==1.14.0",
    "psycopg2-binary==2.9.10",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.0",
    "email-validator==2.2.0",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==4.2.1",
    "itsdangerous==2.2.0",
    "stripe==11.4.1",
    "python3-saml==1.16.0",
    "aiosmtplib==3.0.2",
    "slowapi==0.1.9",
    "httpx==0.28.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.25.0",
    "ruff==0.8.4",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S"]
# S101: asserts are fine in tests; handled per-file below
ignore = ["B008"]  # FastAPI Depends() in defaults is idiomatic

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S105", "S106", "S107"]
"alembic/*" = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
