[project]
name = "analytics-dashboard"
version = "1.0.0"
description = "Real-time multi-tenant analytics dashboard"
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: tests that require running Postgres/Redis services",
]
